fix alignment

--- a/src/country.css
+++ b/src/country.css
@@ -101,6 +101,7 @@ h2:hover,
   justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-top: 20px;
 }
 
 .single-country {
@@ -137,6 +138,11 @@ h2:hover,
 }
 .navbar-nav a {
   color: #fff;
+}
+.select {
+  margin: 20px auto 0;
+  padding: 5px 10px;
+  display: flex;
 }
 @media (max-width: 768px) {
   #root {
